@@ -5,6 +5,7 @@ import javax.annotation.Resource;
 
 import com.alibaba.fastjson2.JSON;
 import com.alibaba.fastjson2.JSONObject;
+import com.baomidou.mybatisplus.core.conditions.update.UpdateWrapper;
 import com.candlk.common.model.Messager;
 import com.candlk.context.web.Jsons;
 import com.candlk.webapp.api.DeepSeekApi;
@@ -15,6 +16,7 @@ import com.candlk.webapp.user.entity.Tweet;
 import com.candlk.webapp.user.model.TweetUserType;
 import com.candlk.webapp.user.service.TokenEventService;
 import com.candlk.webapp.user.service.TweetService;
+import com.candlk.webapp.user.util.ConcurrentExecutor;
 import com.hankcs.hanlp.seg.common.Term;
 import com.hankcs.hanlp.tokenizer.NotionalTokenizer;
 import lombok.extern.slf4j.Slf4j;
@@ -39,30 +41,39 @@ public class GenTokenJob {
 	 * 根据评分排名，生成Token（生产：1 m/次；本地：1 m/次）
 	 */
 	@Scheduled(cron = "${service.cron.TweetJob:0 0/1 * * * ?}")
-	public void run() {
+	public void run() throws Exception {
 		log.info("开始生成Token数据信息...");
 
-		// 根据评分排名，生成Token
-		List<Tweet> tweets = tweetService.lastGenToken(100);
+		// 根据评分排名，生成Token TODO 调整limit
+		List<Tweet> tweets = tweetService.lastGenToken(1);
 		if (!tweets.isEmpty()) {
-			// TODO: 2025/5/6 异步批量并发
+			List<UpdateWrapper<Tweet>> updateWrappers = new ArrayList<>(tweets.size());
 			for (Tweet tweet : tweets) {
-				String[] pair = aiGenToken(tweet.getText());
-
-				// 通过DeepSeek 生成代币名称和符号
-				TokenEvent token = new TokenEvent()
-						.setTweetId(tweet.getId())
-						.setCoin(pair[0])
-						.setSymbol(pair[1])
-						.setStatus(TokenEvent.CREATE)
-						// 热门推文 由定时任务检查是否可以成功 浏览量猛增 推文
-						.setType(TweetUserType.SPECIAL == tweet.getUserType()
-								? TokenEvent.TYPE_SPECIAL : TokenEvent.TYPE_HOT);
-				tokenEventService.save(token);
+				updateWrappers.add(new UpdateWrapper<Tweet>()
+						.set(Tweet.STATUS, Tweet.NEW_TOKEN)
+						.eq(Tweet.ID, tweet.getId()));
 			}
-			// TODO: 2025/5/6 更新推文状态
-		}
+			// 更新推文状态
+			tweetService.updateBatchByWrappers(updateWrappers);
+			ConcurrentExecutor.runConcurrently(tweets, 10, tweet -> {
+				try {
+					final String[] pair = aiGenToken(tweet.getText());
 
+					// 通过DeepSeek 生成代币名称和符号
+					TokenEvent token = new TokenEvent()
+							.setTweetId(tweet.getId())
+							.setCoin(pair[0])
+							.setSymbol(pair[1])
+							.setStatus(TokenEvent.CREATE)
+							// 热门推文 由定时任务检查是否可以成功 浏览量猛增 推文
+							.setType(TweetUserType.SPECIAL == tweet.getUserType()
+									? TokenEvent.TYPE_SPECIAL : TokenEvent.TYPE_HOT);
+					tokenEventService.save(token);
+				} catch (Exception e) {
+					log.error("生成代币名称和代币符号失败：", e);
+				}
+			});
+		}
 		log.info("结束生成Token数据任务。");
 	}
 
@@ -84,8 +95,8 @@ public class GenTokenJob {
 			if (chat.isOK()) {
 				DeepSeekChat data = chat.data();
 				if (CollectionUtils.isNotEmpty(data.choices)) {
-					final String content = data.choices.get(0).message.content;
-					final String fixedText = content.replaceAll("```json\\n", "").replaceAll("```", "").replaceAll("\\n", "");
+					final String content = data.choices.getFirst().message.content;
+					final String fixedText = content.replaceAll("```json", "").replaceAll("```", "");
 					if (JSON.isValid(fixedText)) {
 						JSONObject tokenInfo = Jsons.parseObject(fixedText);
 						coin = tokenInfo.getString("name");
@@ -94,7 +105,7 @@ public class GenTokenJob {
 				}
 			}
 		} catch (Exception e) {
-			log.error("生成代币名称和代币符号失败：", e);
+			log.error("【DeepSeek】生成代币名称和代币符号失败：", e);
 		}
 		return new String[] { coin, symbol };
 	}
